welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:23: error: illegal start of simple expression
		}
                ^